[gd_scene load_steps=8 format=3 uid="uid://se8ww4rck1oq"]

[ext_resource type="Texture2D" uid="uid://otb6v6ijcxk1" path="res://Sprites/win_theme_atlas.png" id="1_t61dj"]
[ext_resource type="Script" path="res://Scripts/Menu/menu_window.gd" id="2_oifak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_21630"]
atlas = ExtResource("1_t61dj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc3ug"]
size = Vector2(304, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgikf"]
atlas = ExtResource("1_t61dj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylos5"]
atlas = ExtResource("1_t61dj")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5377"]
atlas = ExtResource("1_t61dj")
region = Rect2(32, 16, 16, 16)

[node name="Loading_Window" type="NinePatchRect"]
texture_filter = 1
offset_right = 300.0
offset_bottom = 120.0
texture = SubResource("AtlasTexture_21630")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 1
patch_margin_top = 21
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource("2_oifak")

[node name="Tab_Collider" type="Area2D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tab_Collider"]
position = Vector2(150, 10.5)
shape = SubResource("RectangleShape2D_sc3ug")

[node name="Close_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 281.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 19.0
texture_normal = SubResource("AtlasTexture_lgikf")
texture_pressed = SubResource("AtlasTexture_ylos5")
texture_hover = SubResource("AtlasTexture_b5377")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -13.5
offset_right = 125.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
step = 1.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="input_event" from="Tab_Collider" to="." method="_area2d_input"]
[connection signal="pressed" from="Close_Button" to="." method="_close_pressed"]
